<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="This fragment shows how google firebase is used for authentication - registering and logging in to the app."
        android:textSize="17dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="122dp" />

    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#919191"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="3dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registration"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:hint="email"/>

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="password"/>

        <EditText
            android:id="@+id/registerRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Repeat password"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#919191"
        app:layout_constraintTop_toBottomOf="@+id/registerLayout"
        tools:layout_editor_absoluteX="3dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="email"/>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="password"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/userDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#919191"
        app:layout_constraintTop_toBottomOf="@+id/loginLayout"
        tools:layout_editor_absoluteX="3dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User data"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email: "
                android:layout_weight="4"/>

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="LOGIN"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User ID: "
                android:layout_weight="4"/>

            <TextView
                android:id="@+id/userID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="LOGIN"/>

        </LinearLayout>

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>