<resources>
    <string name="app_name">AND_exam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AND exam app</string>
    <string name="nav_header_subtitle">Made with reddit API. r/dankmemes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
